# xnft-tool

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: .gitignore  app.json  main.tsx  package.json  readme.md  xnft.json
src/: cli.rs  commands.rs  constants.rs  init.rs  main.rs  publish.rs  template.rs  utils.rs
