[package]
name = "create-xnft"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jim4067/create-xnft/"
license = "MIT OR Apache-2.0"
keywords = ["cli", "xnft"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "Quickly scaffold an xNFT"
authors = ["Jimii <jimiimutuku@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
